# Ahmed_Portfolio-

./: README.md  app.py  database.py  pyproject.toml
templates/: banner.html  contactus.html  home.html  message_submitted.html  project_details.html  projectslist.html
